<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newNote_text"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="start|top"
        android:singleLine="false"
        android:scrollHorizontally="false"
        android:hint="@string/hint"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="10dp"/>
    
    <RadioGroup
        android:id="@+id/newNote_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_priority_high"
            android:text="@string/priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:id="@+id/btn_priority_mid"
            android:text="@string/priority_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/btn_priority_low"
            android:text="@string/priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/btn_priority_none"
            android:text="@string/priority_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:layout_marginTop="40dp"
        />

</LinearLayout>